Bug 59857 - FILESAVE: Calc saves Excel 2007/2010 spreadsheet incorrectly
Summary: FILESAVE: Calc saves Excel 2007/2010 spreadsheet incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.2.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.1.0 target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-25 18:41 UTC by Tom Williams
Modified: 2020-04-16 16:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sreen shot of Excel 2007 warning message. (27.89 KB, image/jpeg)
2013-01-25 18:41 UTC, Tom Williams
Details
OpenDocument test case (32.43 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-25 18:52 UTC, Tom Williams
Details
Test case saved as XLS file and viewed in Excel 2007. (52.00 KB, image/png)
2013-01-25 18:53 UTC, Tom Williams
Details
The original spreadsheet test case saved in OpenDocument format (32.43 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-25 18:55 UTC, Tom Williams
Details
Test case saved as XLS file and viewed in Excel 2007. (52.00 KB, image/png)
2013-01-25 18:56 UTC, Tom Williams
Details
Test case saved as XLSX file and viewed in Excel 2007. (64.55 KB, image/png)
2013-01-25 18:57 UTC, Tom Williams
Details
Screen shot of warning issued by Excel 2007 while loading the XLSX file. (37.34 KB, image/png)
2013-01-25 18:58 UTC, Tom Williams
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Williams 2013-01-25 18:41:56 UTC
Created attachment 73650 [details]
Sreen shot of Excel 2007 warning message.

Problem description: 

Steps to reproduce:
1. Create a spreadsheet in Calc with a chart with a transparent background
2. Save the spreadsheet in Excel 2007/2010 format
3. View the spreadsheet in Excel 2007

Current behavior: 
Excel 2007 issues a warning message indicating it found "unreadable content" in the spreadsheet file.

Expected behavior:
Excel 2007 should be able to read the file without encoutering any "unreadable content".


Operating System: Ubuntu
Version: 3.6.2.2 release
Comment 1 Tom Williams 2013-01-25 18:52:22 UTC
Created attachment 73651 [details]
OpenDocument test case

This is the original spreadsheet saved in OpenDocument format.  Notice, the chart has a transparent background.
Comment 2 Tom Williams 2013-01-25 18:53:37 UTC
Created attachment 73652 [details]
Test case saved as XLS file and viewed in Excel 2007.

When the test case file is saved in XLS format, Excel 2007 does NOT issue any warnings and the chart is displayed correctly.
Comment 3 Tom Williams 2013-01-25 18:55:34 UTC
Created attachment 73653 [details]
The original spreadsheet test case saved in OpenDocument format
Comment 4 Tom Williams 2013-01-25 18:56:48 UTC
Created attachment 73654 [details]
Test case saved as XLS file and viewed in Excel 2007.

This is a screen shot of the original test case saved in XLS format and viewed in Excel 2007.  Excel did NOT issue any warnings when loading the file and the chart is shown correctly.
Comment 5 Tom Williams 2013-01-25 18:57:45 UTC
Created attachment 73655 [details]
Test case saved as XLSX file and viewed in Excel 2007.

Note the chart is shown WITHOUT a transparent background.  This is incorrect.
Comment 6 Tom Williams 2013-01-25 18:58:28 UTC
Created attachment 73656 [details]
Screen shot of warning issued by Excel 2007 while loading the XLSX file.
Comment 7 Florian Reisinger 2013-04-21 15:05:48 UTC
No error with Version 4.0.3.1 (Build ID: a67943cd4d125208f4ea7fa29439551825cfb39) and MS Excel 2010 @Win7 x64
Comment 8 Tom Williams 2013-04-21 15:09:07 UTC
Thanks for the feedback.  When you load the spread sheet in Excel 2007, does the chart retain its transparent background?

Thanks!
Comment 9 Markus Mohrhard 2013-05-05 00:57:31 UTC
@Florian: Please be extremely careful with these reports. That you can't reproduce it in 2010 does not mean that it is not valid. Even worse in this case it hides that we produce a crappy document and Excel 2007 is correct in complaining as a quick validation shows.

I'll use the bug report for the validation problems around the test document.
Comment 10 Tom Williams 2013-05-05 16:06:02 UTC
I tried saving the test case document, attached to this bug report, in both Excel XP/2003 and Excel 2007/2010 formats using LibreOffice 4.0.3.2 (rc2) on Ubuntu 13.04 Linux and when I opened both documents in Excel 2007, I received no warning messages of any kind.
Comment 11 Markus Mohrhard 2013-05-05 16:47:27 UTC
(In reply to comment #10)
> I tried saving the test case document, attached to this bug report, in both
> Excel XP/2003 and Excel 2007/2010 formats using LibreOffice 4.0.3.2 (rc2) on
> Ubuntu 13.04 Linux and when I opened both documents in Excel 2007, I
> received no warning messages of any kind.

Master still produces crappy documents, so I wonder that 4.0* should be better. And I still get an error message with the document exported from my master build.

So I still consider this bug report valid and will fix the issues I see for 4.1
Comment 12 Tom Williams 2013-05-05 16:51:18 UTC
That's cool. :)  I just wanted to update the ticket with my latest status.  :)

Thanks!
Comment 13 Markus Mohrhard 2013-05-05 17:44:57 UTC
OK, already fixed all the issues with that document.

Libreoffice 4.1 will produce a valid OOXML document that looks ok in Excel 2007/2010 and 2013. Only 2013 has a small problem with showing the x axis labels as dates but I have no idea why this happened.
Comment 14 Commit Notification 2013-05-05 17:55:11 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e415e070d6aaba48f457acb4c295381c69d67c99

respect order of elements in OOXML chart export, related fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-05-05 17:55:29 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=16010abe0102a53e478de0e28453c7b14d48772b

respect element order in OOXML chart export, related fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2013-05-05 17:55:48 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=010f58c4ef9a5e36d1c703ff20f8293bed90100a

overlap is only valid for the 2D bar chart, related fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2013-05-05 17:56:07 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a927086f9a3c94bb7b6b8edec37ae723a6b243aa

respect element order in OOXML export, related fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2013-05-05 17:56:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ed3d39230f5664ae38ecf683da133034901cbbf

respect element order in OOXML chart export, related fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2013-05-05 17:56:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d28d25d0903f94ce9485c04e72400e493db44618

respect element order in OOXML chart export, fdo#59857



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2020-04-16 16:56:32 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1aaf5f559bcc1169cafb73ea4082643a840fcb39

tdf#59857: chart2: Add unittest

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.