respect order of elements in OOXML chart export, related fdo#59857

Change-Id: I541e04d2f4a3b272894ceb67b4bd970e235b96a2